removed image, DOM couldn't find it, created button.js, main.js, and fixed typo in transientState.js

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="has-background-dark has-text-light">
 
     <div id="ship-container" class="has-text-centered">
-        <img src="images/spaceship.png" id="spaceship" alt="spaceship" />
+        
       </div>
       <div id="starfield"></div>
 
@@ -54,7 +54,7 @@
         <div id="cartContents">
           <!-- JS will show selected mineral here -->
         </div>
-        <button class="button is-success mt-3" id="purchaseButton" disabled>Purchase Mineral</button>
+        <button class="button is-success mt-3" id="purchaseButton">Purchase Mineral</button>
       </div>
     </div>
   </section>
